examples/http_headers/envoy-local.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_resources:
  listeners:
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_routes
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        direct_response:
                          status: 200
                          body:
                            inline_string: "Request /hello and be welcomed!\n"
              http_filters:
                - name: envoy.filters.http.wasm
                  typed_config:
                    "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                    type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    value:
                      config:
                        name: "http_headers"
                        vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/tmp/proxy_wasm_example_http_headers.wasm"
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              access_log:
              - filter:
                name: envoy.access_loggers.file
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/stdout
                  log_format:
                    text_format_source:
                      inline_string: |
                        %START_TIME% GWEnvoy LogPublisherImpl level=info startTime=%START_TIME%, txId=%REQ(INTUIT_TID?X-REQUEST-ID)%, method=%REQ(:METHOD)%, req=%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%, outReqUri=%REQ(:PATH)%, status=%RESPONSE_CODE%, xFor=%REQ(X-FORWARDED-FOR)%, requestSize=%BYTES_RECEIVED%, responseSize=%BYTES_SENT%, txTime=%DURATION%, svcTime=%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%, requestPayloadTransferTime=%REQUEST_TX_DURATION%, responsePayloadTransferTime=%RESPONSE_TX_DURATION%, o [...]
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000
